Enable Maven-Compiler-Plugin annotation processing for JDK 22+
Starting with JDK 22, annotation processing is disabled by default.
Reference: https://inside.java/2023/10/23/quality-heads-up/

Since this project relies heavily on annotation processing, the -proc:full compiler flag has been added to explicitly re-enable it. This ensures that all annotation processors are invoked during compilation.
Additionally, IntelliJ detects this flag and automatically enables annotation processing in the project settings.